Added command line tool to encrypt passwords for the OXAP configuration files Added authentication feature for OXAP accounts against config file auth information Decluttered API spec Fixed session handling issues with memcache Added listAll call for Group module
